Fix scrolling through photo galeries